# ilab-poc

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
data_preparation/converted_documents/mgb/: mgb-policy-interactions-industry.md
data_preparation/taxonomy/knowledge/health/mgb/: qna.yaml
ilab_poc/: config.py  main.py  utils.py
ilab_poc/commands/: convertdoc.py
scratch/: mgb-irb-guidance.md
